Integrated sonar analysis in every microservice in monorepo structure